// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`modal flow golden frames renders the help overlay 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
────────╭──────────────────────────────────────────────────────────────╮─────── 
        │                         station help                         │        
▼ statio│                                                              │qs] [▾] 
 [1] ○ c│  Ctrl-O     open/close project view                          │6 #70 ✓ 
 [2] - d│  Ctrl-Q     quit Station                                     │        
 [3] ○ p│  Ctrl-\\     split pane right                                 │  #73 ✓ 
 [4] + s│  Ctrl-^     split pane below (Ctrl-6)                        │        
 [5] ⠋ s│  Ctrl-]     focus next pane                                  │6 #76 … 
        │  Ctrl-/     close split pane (Ctrl-_)                        │        
▼ observ│  Enter/Sp   open project view on welcome                     │qs] [▾] 
 [6] x b│  Esc/↑↓     context menu close/move                          │   #8 ✓ 
 [7] ⠋ p│  Enter/Sp   context menu select                              │8 #16 … 
 [8] ○ t│                     station project view                     │-1 #4 ✓ 
        │  ↑/↓ wheel  scroll project list                              │        
▼ script│  1-9/a-z    start or focus row                               │qs] [▾] 
 [9] ○ a│  N/A/R/C/F/P  new/add/rename/fold/fork/settings              │6 #5 x1 
 [a] ? m│  X          delete session                                   │ -1 #10 
 [b] - o│  /, Z       search / refresh snapshot                        │        
        │  H/?        help                                             │        
↓ 2 hidd╰──────────────────────────────────────────────────────────────╯        
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:delete session /:search H:help 
"
`;

exports[`modal flow golden frames renders the search prompt 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10 
 [b] - old-experiment                     -         no agent                    
search: api                                                                     
↓ 2 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:delete session /:search H:help 
"
`;

exports[`modal flow golden frames renders the collapse prompt 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10 
 [b] - old-experiment                     -         no agent                    
collapse project: 1:station 2:observer 3:scripts 4:empty-project                
↓ 2 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:delete session /:search H:help 
"
`;

exports[`modal flow golden frames renders the project settings picker prompt 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10 
 [b] - old-experiment                     -         no agent                    
settings for project: 1:station 2:observer 3:scripts 4:empty-project            
↓ 2 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:delete session /:search H:help 
"
`;

exports[`modal flow golden frames renders the project settings panel 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
───┌────────────────────────────────────────────────────────────────────────┐── 
   │ Project settings                                                       │   
▼ s│ station                  │ Default agent                               │▾] 
 [1│▸ Default agent           │✓1 codex unknown                             │ ✓ 
 [2│  Remove project          │ 2 opencode unknown                          │   
 [3│                          │                                             │ ✓ 
 [4│                          │ ✓ current · 1-9/a-z select                  │   
 [5│                          │                                             │ … 
   │                          │                                             │   
▼ o│                          │                                             │▾] 
 [6│                          │                                             │ ✓ 
 [7│                          │                                             │ … 
 [8│                          │                                             │ ✓ 
   │                          │                                             │   
▼ s│                          │                                             │▾] 
 [9│                          │                                             │x1 
 [a│                          │                                             │10 
 [b│                          │                                             │   
   │ ↑↓ move   →/enter edit   esc close                                     │   
↓ 2└────────────────────────────────────────────────────────────────────────┘   
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:delete session /:search H:help 
"
`;

exports[`modal flow golden frames renders the project settings remove pane 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
───┌────────────────────────────────────────────────────────────────────────┐── 
   │ Project settings                                                       │   
▼ s│ station                  │ Remove project                              │▾] 
 [1│  Default agent           │ Removes it from Station.                    │ ✓ 
 [2│▸ Remove project          │ Worktrees & files stay on disk.             │   
 [3│                          │                                             │ ✓ 
 [4│                          │ Type "delete station" to confirm            │   
 [5│                          │ ▸ |delete station                           │ … 
   │                          │                                             │   
▼ o│                          │ [ Remove project (R) ]                      │▾] 
 [6│                          │                                             │ ✓ 
 [7│                          │                                             │ … 
 [8│                          │                                             │ ✓ 
   │                          │                                             │   
▼ s│                          │                                             │▾] 
 [9│                          │                                             │x1 
 [a│                          │                                             │10 
 [b│                          │                                             │   
   │ ←/esc back                                                             │   
↓ 2└────────────────────────────────────────────────────────────────────────┘   
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:delete session /:search H:help 
"
`;

exports[`modal flow golden frames renders the project settings optimistic default 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
───┌────────────────────────────────────────────────────────────────────────┐── 
   │ Project settings                                                       │   
▼ s│ station                  │ Default agent                               │▾] 
 [1│▸ Default agent           │ 1 codex unknown                             │ ✓ 
 [2│  Remove project          │✓2 opencode unknown                 updating…│   
 [3│                          │                                             │ ✓ 
 [4│                          │ ✓ current · 1-9/a-z select                  │   
 [5│                          │                                             │ … 
   │                          │                                             │   
▼ o│                          │                                             │▾] 
 [6│                          │                                             │ ✓ 
 [7│                          │                                             │ … 
 [8│                          │                                             │ ✓ 
   │                          │                                             │   
▼ s│                          │                                             │▾] 
 [9│                          │                                             │x1 
 [a│                          │                                             │10 
 [b│                          │                                             │   
   │ ↑↓ move   →/enter edit   esc close                                     │   
↓ 2└────────────────────────────────────────────────────────────────────────┘   
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:delete session /:search H:help 
"
`;

exports[`modal flow golden frames renders the remove slot sheet 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
┌────────────────────────────────────────────┐code  idle           +14 -6 #5 x1 
│ Select session to delete                   │code  unknown           +3 -1 #10 
│                                            │      no agent                    
│ Click a row or press slot key              │                                  
│ Esc:cancel                                 │                                  
│                                            │───────────────────────────────── 
└────────────────────────────────────────────┘ X:delete session /:search H:help 
"
`;

exports[`modal flow golden frames renders the remove confirm sheet 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
┌────────────────────────────────────────────┐                                  
│ Delete session?                            │                    [sh] [qs] [▾] 
│ Session  cli-help-man                      │code  idle           +14 -6 #5 x1 
│ Removes agent, worktree, and panes.        │code  unknown           +3 -1 #10 
│                                            │      no agent                    
│ Yes (y)     No (n)                         │                                  
│ Esc/Enter:cancel                           │                                  
│                                            │───────────────────────────────── 
└────────────────────────────────────────────┘ X:delete session /:search H:help 
"
`;

exports[`modal flow golden frames renders the rename slot prompt 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10 
 [b] - old-experiment                     -         no agent                    
Choose the slot to rename: 1-9/a-z                                              
↓ 2 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:delete session /:search H:help 
"
`;

exports[`modal flow golden frames renders the rename sheet 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 1 working  ! 3 needs you  ○ 0 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  4 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ! hook-scope                     codex     Agent needs appro… +8 -2 #12 x2 
 [2] ? metadata-refresh               codex     unknown                   +3 -1 
 [3] ! popup-latency                  codex     No progress was… +120 -44 #13 … 
 [4] ⠋ pr-info                        codex     working                   #11 ✓ 
                                                                                
▼ observer  2 sessions · 2 agents                                 [sh] [qs] [▾] 
 [5] x done-run                       opencode  exited                          
 [6] ! sqlite-cleanup                 opencode  Agent needs appro… +19 -2 #6 x1 
                                                                                
                                                                                
                                                                                
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Rename Session                                                               │
│                                                                              │
│ Name       hook-scope|                                                       │
│ Enter:rename   Esc:back                                                      │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the fork slot sheet 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
┌────────────────────────────────────────────┐code  idle           +14 -6 #5 x1 
│ Select session to fork                     │code  unknown           +3 -1 #10 
│                                            │      no agent                    
│ Click a row or press slot key              │                                  
│ Esc:cancel                                 │                                  
│                                            │───────────────────────────────── 
└────────────────────────────────────────────┘ X:delete session /:search H:help 
"
`;

exports[`modal flow golden frames renders the fork details sheet 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
┌────────────────────────────────────────────┐code  idle             +1 -1 #4 ✓ 
│ Fork Session                               │                                  
│ Source   station · cli-help-man            │                    [sh] [qs] [▾] 
│ > Branch cli-help-man-fork|                │code  idle           +14 -6 #5 x1 
│   Copy   [x] uncommitted changes           │code  unknown           +3 -1 #10 
│ Source keeps running — copy is read-only.  │      no agent                    
│                                            │                                  
│ Fork (enter)                               │                                  
│ ↑↓:field space:toggle enter:fork esc:back  │───────────────────────────────── 
└────────────────────────────────────────────┘ X:delete session /:search H:help 
"
`;

exports[`modal flow golden frames renders the new session review 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Create Session                                                               │
│                                                                              │
│ Project    station                                                           │
│ Name       station-XXXXXX                                                    │
│ Agent      codex unknown                                                     │
│                                                                              │
│ Enter:create N:name P:project A:agent Esc:cancel                             │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session edit name 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Set Session Name                                                             │
│                                                                              │
│ Project    station                                                           │
│ Name       |station-XXXXXX                                                   │
│                                                                              │
│ Enter:save   Esc:back                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session pick project 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Choose Project                                                               │
│                                                                              │
│ 1 station healthy                                                            │
│ 2 observer healthy                                                           │
│ 3 scripts healthy                                                            │
│ 4 empty-project healthy                                                      │
│                                                                              │
│ 1-9/a-z:select   Esc:back                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session pick agent 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Choose Agent                                                                 │
│                                                                              │
│ 1 codex unknown                                                              │
│ 2 opencode unknown                                                           │
│                                                                              │
│ 1-9/a-z:select   Esc:back                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the project default agent picker 1`] = `
"station
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited
───────────────────────────────────────────────────────────────────────────────

▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾]
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓
 [2] - docs-cleanup                       -         no agent
 [3] ○ pty-buffer                         codex     idle                  #73 ✓
 [4] + session-resume                     codex     starting
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 …

▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾]
 [6] x batch-export                       opencode  exited                 #8 ✓
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 …
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓

┌──────────────────────────────────────────────────────────────────────────────┐
│ Select default agent for station                                             │
│                                                                              │
│✓1 codex unknown                                                              │
│ 2 opencode unknown                                                           │
│                                                                              │
│ ✓ current   1-9/a-z:select   Esc:cancel                                      │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the add project sheet 1`] = `
"station                                                                         
FLEET  ● 0 ready  ⠿ 2 working  ! 0 needs you  ○ 4 idle  ? 1 unknown  x 1 exited 
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Add Project                                                                  │
│ Start location                                                               │
│                                                                              │
│ > current directory                          /Users/example/Developer/station│
│   ~                                                                      home│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ Enter:open Right:open Esc:cancel                                             │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;
